# kra-gdk-pixbuf

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: PostInstall.cmake
script/: postinst  postrm
src/: CMakeLists.txt  pixbufloader-kra.c
